fix: no overflow horitonzal, scroll vertical

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -45,7 +45,7 @@ em {
 
 html {
   font-size: 14px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
